# AGE

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Randomly  VENDOR_LICENCES  contr-test
.github/: dependabot.yml
.github/workflows/: codeql.yml
AGE/: CMakeLists.txt
AGE/assets/core_assets/shaders/: 2dRendererShader.glsl
AGE/include/: Age.h  agepch.h
AGE/include/Age/: Age.h  Application.h  Core.h  EntryPoint.h  KeyCodes.h  Log.h  MouseCodes.h  lib.h
AGE/include/Age/Events/: Event.h  KeyEvent.h  MouseEvent.h
AGE/include/Core/: lib.h
AGE/src/: Application.cpp  Log.cpp  agepch.cpp  agepch.h  lib.cpp
AGE/src/Age/: Application.cpp  Application.h  Assert.h  Core.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
AGE/src/Age/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  ImGuiBuild.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timer.cpp  Timer.h  Timestep.cpp  Timestep.h  Window.cpp  Window.h
AGE/src/Age/Debug/: Assert.h  DebugLayer.cpp  DebugLayer.h  Instrumentor.h  Profiler.cpp  Profiler.h
AGE/src/Age/Events/: Event.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
AGE/src/Age/ImGui/: ImGuiBuild.h  ImGuiLayer.cpp  ImGuiLayer.h
AGE/src/Age/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Context.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  ImGuiHandler.cpp  ImGuiHandler.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderAPI.cpp  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
AGE/src/Age/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h  SerializationExpansions.cpp  SerializationExpansions.h
AGE/src/Age/Utils/: FileDialogs.h  MathUtils.cpp  MathUtils.h  Random.cpp  Random.h
AGE/src/Platform/Desktop/: DesktopInput.cpp
AGE/src/Platform/Linux/: LinuxFileDialogs.cpp
AGE/src/Platform/OpenGL/: ContextOpenGL.cpp  ContextOpenGL.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLImGuiHandler.cpp  OpenGLImGuiHandler.h  OpenGLInput.cpp  OpenGLInput.h  OpenGLPlatform.h  OpenGLPlatformImGui.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h  PlatformGL.h  ShaderOpenGL.cpp  ShaderOpenGL.h  WindowOpenGL.cpp  WindowOpenGL.h
AGE/src/Platform/Windows/: WindowsFileDialog.cpp
AGE/src/RenderAPI/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLFramebufferUtils.cpp  OpenGLFramebufferUtils.h  OpenGLImGuiHandler.cpp  OpenGLImGuiHandler.h  OpenGLMaster.h  OpenGLPlatformImGui.h  OpenGLRenderAPI.cpp  OpenGLRenderAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderUtils.cpp  OpenGLShaderUtils.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLWindow.cpp  OpenGLWindow.h
AGE/src/RenderAPI/Vulkan/: QueueFamilyIndices.cpp  QueueFamilyIndices.h  SwapChainSupportDetails.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanImGuiHandler.cpp  VulkanImGuiHandler.h  VulkanPlatformMaster.h  VulkanRenderAPI.cpp  VulkanRenderAPI.h  VulkanRenderContext.cpp  VulkanRenderContext.h  VulkanShader.cpp  VulkanShader.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniformBuffer.cpp  VulkanUniformBuffer.h  VulkanVertexArray.cpp  VulkanVertexArray.h  VulkanWindow.cpp  VulkanWindow.h
AGEditor/: CMakeLists.txt
AGEditor/src/: AGEditor.cpp  Editor.cpp  Editor.h  EditorLayer.cpp  EditorLayer.h
AGEditor/src/Panels/: SceneOutlinePanel.cpp  SceneOutlinePanel.h
Sandbox/: CMakeLists.txt
Sandbox/assets/shaders/: 2dRendererShader.glsl  FlatColor.glsl  Texture.glsl
Sandbox/src/: Particle.cpp  Particle.h  Sandbox.cpp  Sandbox.h  Sandbox2DLayer.cpp  Sandbox2DLayer.h  SandboxLayer.cpp  SandboxLayer.h  main.cpp
VulkanExperiment/: CMakeLists.txt
VulkanExperiment/src/: VulkanExperiment.cpp
docs/: CONTRIBUTING.md
scripts/: age_project_cmake_lists_template  entry_point_cpp_template  setup_new_project.py
